--- a/pom.xml
+++ b/pom.xml
@@ -303,6 +303,7 @@
 					</execution>
 				</executions>
 			</plugin>
+		</plugin>
 		</pluginManagement>
 			<!--# Changes for Software Composition Analysis Scan using Snyk
 #By ASecurityGuru
